objects/Custom_Account_Trends__c.object
<CustomObject>
    <description>Custom Object for mass inserting or creating account trend data</description>
    <fields>
        <fullName>CustomAccountTrendCopadoApoAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the trend record to a Copado APO Account. Filters out ClickDeploy Accounts.
Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <label>Copado APO Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>notContain</operation>
                <value>Click</value>
            </filterItems>
            <infoMessage>For Salesforce Midpoint trends, don&apos;t use ClickDeploy Accounts.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Custom_Account_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomAccountTrendDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the value occurred. 
Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <inlineHelpText>Date the value occurred. Default value is TODAY.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomAccountTrendEbstaScore__c</fullName>
        <description>The account ebsta score at a certain point in time. Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <inlineHelpText>Snapshot of the Account Ebsta Score.</inlineHelpText>
        <label>Account Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomAccountTrendMatchedAccount__c</fullName>
        <description>Salesforce AOV Account matched to the related Copado APO Account. Some may be fuzzy duplicates with a Salesforce Midpoint that is &lt;= to the related Account&apos;s Salesforce Midpoint.
Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <inlineHelpText>Salesforce AOV Account matched to the related Copado APO Account.</inlineHelpText>
        <label>Matched Salesforce AOV Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomAccountTrendSalesforceMidpoint__c</fullName>
        <description>The midpoint of the Salesforce AOV Band for a particular date.
Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <inlineHelpText>The midpoint of the Salesforce AOV Band for a particular date.</inlineHelpText>
        <label>Salesforce Midpoint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the trend, if needed.
Read only at the Field Level, but not the page layout. Access granted by permission set.</description>
        <inlineHelpText>Description of the trend, if needed.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Trends</relationshipLabel>
        <relationshipName>Account_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce CSM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Trends (Salesforce CSM)</relationshipLabel>
        <relationshipName>Account_Trends2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce RVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Trends (Salesforce RVP)</relationshipLabel>
        <relationshipName>Account_Trends1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Trend</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Account Trend -{000}</displayFormat>
        <label>Account Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>